--- a/PortfolioBuilder/templates/add_project_form.html
+++ b/PortfolioBuilder/templates/add_project_form.html
@@ -47,10 +47,11 @@ Add project
                 <div class="form-group">
                     <input type="date" name="project_end_date" class="form-control" placeholder="date format yyyy-mm-dd"  id="id_project_end_date">
                 </div>
-                {% comment %} <label for="basic-url" class="form-label">Your project URL</label>
+               
+                 <label for="basic-url" class="form-label">Your project URL</label>
                 <div class="input-group mb-3">
                  <input type="text" class="form-control" id="project_link" aria-describedby="basic-addon3"placeholder="Paste your project link...." required id="id_project_link"name="project_link">
-                </div> {% endcomment %}
+                </div> 
                 <label for="id_work_experience">Explain your project</label>
                 <div class="form-group">
                  <textarea name="project_desc" class="form-control" placeholder="Explain your project here..." cols="40" rows="10" required id="id_project_desc" dir="auto"></textarea>
