--- a/PortfolioBuilder/templates/details_page.html
+++ b/PortfolioBuilder/templates/details_page.html
@@ -42,6 +42,10 @@ Details
             <input type="text" class="form-control" id="place" value="{{ details_page.profession }}" readonly>
           </div>
           <div class="form-group">
+            <label for="place">Linkedin URL:</label>
+            <input type="text" class="form-control" id="place" value="{{ details_page.linkedin_url }}" readonly>
+          </div>
+          <div class="form-group">
             <label for="about">About:</label>
             <textarea class="form-control" id="about" rows="5" readonly>{{ details_page.about }}</textarea>
           </div>          
