--- a/PortfolioBuilder/templates/get_details_form.html
+++ b/PortfolioBuilder/templates/get_details_form.html
@@ -65,6 +65,9 @@ Provide your details
                 <div class="mb-3">
                     <textarea name="about" id="id_about" class="form-control" placeholder="Write about yourself"></textarea>
                 </div>
+                <div class="input-group mb-3">
+                 <input type="text" class="form-control" id="linkedin_url" aria-describedby="basic-addon3"placeholder="Paste your linkedin progile link...."name="linkedin_url">
+                </div> 
                 <div class="mb-3">
                     <label for="fileInput" class="form-label">Choose a profile picture</label>
                     <input type="file" name="profile_picture" accept="image/*" required id="id_profile_picture" class="form-control">
