--- a/PortfolioBuilder/static/portfolio.css
+++ b/PortfolioBuilder/static/portfolio.css
@@ -63,7 +63,7 @@ textarea {
   resize: none; }
 
 .heading-primary {
-  font-size: 6rem;
+  font-size: 4rem;
   text-transform: uppercase;
   letter-spacing: 3px;
   text-align: center; }
@@ -165,7 +165,7 @@ textarea {
     padding: calc(1.5rem - 2px) calc(5rem - 2px); }
 
 .sec-pad {
-  padding: 12rem 0; }
+  padding: 3rem 0; }
   @media only screen and (max-width: 56.25em) {
     .sec-pad {
       padding: 8rem 0; } }
@@ -793,14 +793,29 @@ textarea {
   
   .new-card-title {
     margin-bottom: 10px;
+    text-align: center;
   }
   
   .new-card-text {
     margin-bottom: 15px;
+    text-align: center;
+
   }
   
   .btn-primary.btn-gradient {
     background-image: linear-gradient(to right, #FF6E70, #FF9B9D);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    width: 21rem;
+    height: 3.5rem;
+  }
+  
+  @media (max-width: 767px) {
+    .btn-primary.btn-gradient {
+      margin: 0 auto;
+    }
   }
   
   @media (max-width: 768px) {
