--- a/PortfolioBuilder/static/portfolio.css
+++ b/PortfolioBuilder/static/portfolio.css
@@ -63,9 +63,10 @@ textarea {
   resize: none; }
 
 .heading-primary {
-  font-size: 4rem;
-  text-transform: uppercase;
-  letter-spacing: 3px;
+  font-size: 4.4rem;
+  /* text-transform: uppercase; */
+  margin-top: -14%;
+  letter-spacing: 1px;
   text-align: center; }
   @media only screen and (max-width: 37.5em) {
     .heading-primary {
@@ -150,7 +151,7 @@ textarea {
     transform: translateY(-3px); }
   .btn--bg {
     padding: 1.5rem 8rem;
-    font-size: 2rem; }
+    font-size: 1.5rem; }
   .btn--med {
     padding: 1.5rem 5rem;
     font-size: 1.6rem; }
@@ -185,8 +186,9 @@ textarea {
 
 .home-hero {
   color: #fff;
-  background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)), url(../../assets/svg/common-bg.svg);
+  /* background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)), url(../../assets/svg/common-bg.svg); */
   background-position: center;
+  background-color: #4158D0; background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
   height: 100vh;
   min-height: 80rem;
   max-height: 120rem;
@@ -702,33 +704,37 @@ textarea {
   to {
     opacity: 0;
     top: 27px; } }
-  .skills-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 800px;
-  margin: 0 auto; /* Center the container */
-  margin-top: 30px;
-}
-
-.card {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  margin-bottom: 10px;
-  padding: 10px; /* Add padding for spacing */
-  background-color: #f5f5f5;  
-}
-
-.card__skill {
-  flex: 1;
-  margin-right: 10px;
-  text-align: center;
-  display: flex; /* Add display: flex; */
-  align-items: center;
-  justify-content: flex-start; /* Add justify-content: flex-start; */
-  padding-left: 40px; /* Add the desired spacing value */
-}
+    .skills-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      max-width: 800px;
+      margin: 0 auto; /* Center the container */
+      margin-top: 30px;
+    }
+    
+    .card {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 10px; /* Add padding for spacing */
+      background-color: #ffffff; /* Add white background color */
+      border-radius: 10px; /* Add border-radius for curvy effect */
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add box-shadow for shadow effect */
+    }
+    
+    
+    .card__skill {
+      flex: 1;
+      margin-right: 10px;
+      text-align: center;
+      display: flex; /* Add display: flex; */
+      align-items: center;
+      justify-content: flex-start; /* Add justify-content: flex-start; */
+      padding-left: 40px; /* Add the desired spacing value */
+    }
+    
 
 .card__progress {
   flex: 3;
@@ -746,7 +752,8 @@ textarea {
   left: 0;
   height: 100%;
   width: 80%; /* Increase or decrease the width value as desired */
-  background-color: green;
+  /* background-color: green; */
+background-image: linear-gradient( 109.6deg,  rgba(61,131,97,1) 11.2%, rgba(28,103,88,1) 91.1% );
   overflow: hidden;
   animation: progressBarAnimation 1s ease-in-out; /* Add animation */
 }
@@ -778,13 +785,18 @@ textarea {
   }
   
   .new-card {
+    position: relative; /* Add position: relative */
     flex-basis: calc(33.33% - 20px);
     margin-right: 20px;
     margin-bottom: 20px;
-    background-color: #ffffff;
+    background-color: #FF3CAC;
+    background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+    color: white;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    display: flex;
+    flex-direction: column;
   }
   
   .new-card:last-child {
@@ -794,12 +806,20 @@ textarea {
   .new-card-title {
     margin-bottom: 10px;
     text-align: center;
+    font-size: 1.5rem;
   }
   
   .new-card-text {
     margin-bottom: 15px;
     text-align: center;
-
+    font-size: 1.3rem;
+  }
+  
+  .new-card__cta {
+    position: absolute; /* Add position: absolute */
+    bottom: 20px; /* Adjust the value as needed */
+    left: 50%;
+    transform: translateX(-50%);
   }
   
   .btn-primary.btn-gradient {
@@ -808,7 +828,7 @@ textarea {
     justify-content: center;
     align-items: center;
     color: white;
-    width: 21rem;
+    width: 22rem;
     height: 3.5rem;
   }
   
@@ -820,10 +840,11 @@ textarea {
   
   @media (max-width: 768px) {
     .new-card {
-      flex-basis: 100%; /* Change to 100% */
+      flex-basis: 100%;
       margin-right: 0;
     }
   }
+  
   .footer {
     position: absolute;
     bottom: 0;
@@ -846,6 +867,7 @@ textarea {
   
   .footer__name {
     font-weight: bold;
+    font-size: small;
   }
   
   .footer__right {
