changed Home.jpg to home.jpg

--- a/PortfolioBuilder/templates/home.html
+++ b/PortfolioBuilder/templates/home.html
@@ -26,7 +26,7 @@ Home
             {% endif %}
           </div>
           <div class="col-md-6">
-            <img src="{%static 'Home.jpg' %}" alt="Image" class="img-fluid">
+            <img src="{%static 'home.jpg' %}" alt="Image" class="img-fluid">
           </div>
         </div>
       </div>
