--- a/PortfolioBuilder/templates/get_details_form.html
+++ b/PortfolioBuilder/templates/get_details_form.html
@@ -66,7 +66,7 @@ Provide your details
                     <textarea name="about" id="id_about" class="form-control" placeholder="Write about yourself"></textarea>
                 </div>
                 <div class="input-group mb-3">
-                 <input type="text" class="form-control" id="linkedin_url" aria-describedby="basic-addon3"placeholder="Paste your linkedin progile link...."name="linkedin_url">
+                 <input type="text" class="form-control" id="linkedin_url" aria-describedby="basic-addon3"placeholder="Paste your linkedin profile link...."name="linkedin_url">
                 </div> 
                 <div class="mb-3">
                     <label for="fileInput" class="form-label">Choose a profile picture</label>
