--- a/PortfolioBuilder/templates/account/login.html
+++ b/PortfolioBuilder/templates/account/login.html
@@ -11,13 +11,13 @@
                 <div style="box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); padding: 20px;">
                     <div class="row">
                         <div class="col-md-6">
-                            <h1 class="text-2xl my-4 text-center">Sign up</h1>
+                            <h1 class="text-2xl my-4 text-center">Sign in</h1>
                             <form method="POST">
                                 {% csrf_token %}
                                 {{ form|crispy }}
                                 <div class="text-center">
                                     <div class="d-grid gap-2 col-8 mx-auto">
-                                        <button type="submit" class="btn btn-signup">Sign up</button>
+                                        <button type="submit" class="btn btn-signup">Sign in</button>
                                     </div>
                                     <div class="or-divider my-3">
                                         <span class="or-text">or</span>
