--- a/PortfolioBuilder/templates/navbar.html
+++ b/PortfolioBuilder/templates/navbar.html
@@ -13,7 +13,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0"style="padding-left:15px;">
         <!-- TESTING -->
         {% if user.is_authenticated %}
         <li class="nav-item">
