--- a/PortfolioBuilder/templates/user_portfolios.html
+++ b/PortfolioBuilder/templates/user_portfolios.html
@@ -4,6 +4,14 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'home.css' %}">
+<style>
+  .read-more {
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+</style>
+
 <div class="container" style="margin-top: 50px;">
   <div class="row justify-content-center">
     <div class="col-lg-6 col-md-8">
@@ -20,9 +28,17 @@
                 <div class="col-8 col-md-9">
                   <div class="card-body">
                     <h5 class="card-title">{{ portfolio.name }}</h5>
-                    <p class="card-text">{{ portfolio.about }}</p>
+                    <p class="card-text">
+                      {% if portfolio.about|length > 100 %}
+                        {{ portfolio.about|truncatechars:100 }}
+                        <span id="more{{ portfolio.id }}" style="display: none;">{{ portfolio.about|slice:":None" }}</span>
+                        <a href="#" id="btn{{ portfolio.id }}" class="read-more" onclick="showMore({{ portfolio.id }}); return false;">Read More</a>
+                      {% else %}
+                        {{ portfolio.about }}
+                      {% endif %}
+                    </p>
                     <a href="{% url 'Home:details_page' portfolio.slug %}" class="btn btn-primary my-2">View Details</a>
-                    <a href="{% url 'Home:create_portfolio' portfolio.slug %}" class="btn btn-primary">View portfolio</a> 
+                    <a href="{% url 'Home:create_portfolio' portfolio.slug %}" class="btn btn-primary">View Portfolio</a> 
                   </div>
                 </div>
               </div>
@@ -38,4 +54,19 @@
     </div>
   </div>
 </div>
+
+<script>
+  function showMore(id) {
+    var moreText = document.getElementById("more" + id);
+    var btnText = document.getElementById("btn" + id);
+    if (moreText.style.display === "none") {
+      moreText.style.display = "inline";
+      btnText.innerHTML = "Read Less";
+    } else {
+      moreText.style.display = "none";
+      btnText.innerHTML = "Read More";
+    }
+  }
+</script>
+
 {% endblock %}
